# This test assumes that a budget has been generated for the specific user

appId: com.anonymous.example
---
- retry:
    maxRetries: 2
    commands:
      - launchApp
      - tapOn: "Budgets"
      - assertVisible: "$.*"
      - scrollUntilVisible:
          element: "Budget Categories"
