appId: com.anonymous.example
---
- retry:
    maxRetries: 3
    commands:
      - launchApp
      - assertVisible: "Connect"
      - tapOn: "Connect"
      - assertVisible: "Select your institution"
      - tapOn: ".*(OAuth).*"
      - tapOn: "Go to log in"
      - runFlow:
          when:
            platform: android
          commands:
            - tapOn:
                text: "Authorize"
      - runFlow:
          when:
            platform: iOS
          commands:
            - tapOn:
                text: "Continue"
            - tapOn: # Maestro doesn't provide a wait command, so we use a delayed optional tap
                text: "non_existent_text"
                optional: true
                repeat: 1
                delay: 10000
            # Maestro can't see within ASWebAuthenticationSession, so we have to use points
            - tapOn:
                point: 21%,51%
      - assertVisible: "Done"
